--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -9,11 +9,11 @@
                         </div>
 
                         <div class="form-group mb-3">
-                            <input type="text" required="" name="fname" placeholder="Prenom " class="form-control"
+                            <input type="text" name="fname" placeholder="Prenom " class="form-control"
                                 formControlName="prenom">
                         </div>
                         <div class="form-group mb-3">
-                            <input type="text" required="" name="fname" placeholder="Nom " class="form-control"
+                            <input type="text" name="fname" placeholder="Nom " class="form-control"
                                 formControlName="nom">
                         </div>
                         <div class="form-group mb-3">
@@ -37,11 +37,11 @@
                         </div>
 
                         <div class="form-group mb-3">
-                            <input type="text" name="billing_address" required="" placeholder="Adresse "
+                            <input type="text" name="billing_address" placeholder="Adresse "
                                 class="form-control" formControlName="adresse">
                         </div>
                         <div class="form-group mb-3">
-                            <input required="" type="text" name="email" placeholder="Email " class="form-control"
+                            <input  type="text" name="email" placeholder="Email " class="form-control"
                                 formControlName="email">
                         </div>
                         <div class="heading_s1">
