--- a/src/app/components/product-item-list/product-item-list.component.html
+++ b/src/app/components/product-item-list/product-item-list.component.html
@@ -5,10 +5,11 @@
         </a>
         <div class="product_action_box">
             <ul class="list_none pr_action_btn">
-                <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i> Ajouter au panier</a></li>
-                <!-- <li><a href="shop-compare.html" class="popup-ajax"><i class="icon-shuffle"></i></a></li>
-                <li><a href="shop-quick-view.html" class="popup-ajax"><i class="icon-magnifier-add"></i></a></li>
-                <li><a href="#"><i class="icon-heart"></i></a></li> -->
+                <li class="add-to-cart">
+                    <a href="#">
+                        <i class="icon-basket-loaded"></i>
+                     Ajouter au panier</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -16,8 +17,8 @@
         <h6 class="product_title"><a [routerLink]="['/produitDAO', produitDAO?.slug]">{{produitDAO?.designation}}</a>
         </h6>
         <div class="product_price">
-            <span class="price">{{produitDAO?.prixUnitaire }} f</span>
-            <del>{{produitDAO?.prixRegulier}} f</del>
+            <span class="price">{{produitDAO?.prixUnitaire! | formatMontant }} f</span>
+            <del>{{produitDAO?.prixRegulier! | formatMontant}} f</del>
             <div class="on_sale">
                 <span>{{ produitDAO | formatSoldeRate }} de réduction</span>
             </div>
@@ -31,13 +32,6 @@
         <div class="pr_desc">
             <p>{{produitDAO?.description}}</p>
         </div>
-        <!-- <div class="pr_switch_wrap">
-            <div class="product_color_switch">
-                <span class="active" data-color="#87554B"></span>
-                <span data-color="#333333"></span>
-                <span data-color="#DA323F"></span>
-            </div>
-        </div> -->
         <div class="list_product_action_box">
             <ul class="list_none pr_action_btn">
                 <li class="add-to-cart" (click)="addToCart($event)">
