--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -25,10 +25,10 @@
             </a></h6>
         <div class="product_price">
             <span class="price">
-                {{produitDAO?.prixUnitaire }} f
+                {{produitDAO?.prixUnitaire! | formatMontant }} f
             </span>
             <del>
-                {{produitDAO?.prixRegulier}} f
+                {{produitDAO?.prixRegulier! | formatMontant}} f
             </del>
             <div class="on_sale">
                 <span> {{ produitDAO | formatSoldeRate }} de réduction</span>
