--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -272,8 +272,8 @@
                                                         [routerLink]="['/produitDAO', currentProd?.slug]">{{currentProd.designation}}</a>
                                                 </h6>
                                                 <div class="product_price"><span
-                                                        class="price">{{produitDAO?.prixUnitaire }}
-                                                        f</span><del>{{produitDAO?.prixRegulier}} f</del>
+                                                        class="price">{{produitDAO?.prixUnitaire! | formatMontant }}
+                                                        f</span><del>{{produitDAO?.prixRegulier! | formatMontant}} </del>
                                                     <div class="on_sale"><span>{{ produitDAO | formatSoldeRate }} de
                                                             réduction</span></div>
                                                 </div>
