--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -70,11 +70,11 @@
                                         <tr *ngFor="let article of panier?.articles">
                                             <td>{{article.produitDAO?.designation}}
                                                 <span class="product-price">{{article.produitDAO?.prixUnitaire! | formatMontant}}
-                                                    f</span>
+                                                    </span>
                                                 x<span class="product-qty"> {{article.quantite}}</span>
                                             </td>
                                             <td>
-                                                {{article?.total! | formatMontant}} FCFA
+                                                {{article?.total! | formatMontant}}
                                             </td>
                                         </tr>
                                     </tbody>
@@ -85,7 +85,7 @@
                                         </tr>
                                         <tr>
                                             <th>Total</th>
-                                            <td class="product-subtotal">{{panier?.total! | formatMontant}} FCFA</td>
+                                            <td class="product-subtotal">{{panier?.total! | formatMontant}}</td>
                                         </tr>
                                     </tfoot>
                                 </table>
@@ -104,7 +104,7 @@
                 <div class="col-md-12">
                     <a (click)="ajouterClientEtEnregistrerCde()" class="btn btn-fill-out btn-block">Confirmer votre
                         commande
-                        ({{panier?.total! | formatMontant}} FCFA)
+                        ({{panier?.total! | formatMontant}})
                     </a>
                 </div>
 
