--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -277,6 +277,7 @@
                                                     <div class="on_sale"><span>{{ currentProd | formatSoldeRate }} de
                                                             réduction</span></div>
                                                 </div>
+                                                <!-- nhjsj -->
                                                 <div class="cart_btn row g-2">
                                                     <div class="col-12 col-md-6">
                                                         <button type="button" (click)="ajouterAuPanier($event)"
