--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -232,7 +232,7 @@
                     <div class="medium_divider"></div>
                 </div>
             </div>
-            <div class="row" *ngIf="produitRelative.length">
+            <div class="row" >
                 <div class="col-12">
                     <div class="heading_s1">
                         <h3>Produits Simulaires</h3>
