--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -45,10 +45,12 @@
                                 </div><span class="rating_num">(21)</span>
                             </div>
                             <div class="pr_desc">
-                                <p *ngIf="isDescriptionCollapsed">{{ shortDescription }} <span>...</span> </p>
-                                <p>
-                                    <a class="voirPlus" (click)="scrollToDescription()" style="cursor: pointer;">Voir
-                                        plus</a>
+                                <p *ngIf="isDescriptionCollapsed" [innerHTML]="shortDescription"></p>
+
+                                <p *ngIf="isDescriptionCollapsed">
+                                    <a class="voirPlus" (click)="isDescriptionCollapsed = false; scrollToDescription()" style="cursor: pointer;">
+                                    Voir plus
+                                    </a>
                                 </p>
                             </div>
                             <div class="product_sort_info">
@@ -127,10 +129,12 @@
                         </ul>
                         <div class="tab-content shop_info_tab">
                             <div role="tabpanel" aria-labelledby="Description-tab" class="tab-pane fade show active">
-                                Description du
-                                {{produitDAO?.description }} </div>
+                                <span [innerHTML]="produitDAO?.description || 'Aucune description disponible'"></span>
+                            </div>
+
                             <div id="Additional-info" role="tabpanel" aria-labelledby="Additional-info-tab"
-                                class="tab-pane fade"> {{produitDAO?.info }} </div>
+                                class="tab-pane fade"> 
+                            <span [innerHTML]="produitDAO?.info || 'Aucune info disponible'"></span> </div>
                             <div id="Reviews" role="tabpanel" aria-labelledby="Reviews-tab" class="tab-pane fade">
                                 <div class="comments">
                                     <h5 class="product_tab_title">2 Avis Pour <span>{{produitDAO?.designation }}</span>
@@ -232,7 +236,7 @@
                     <div class="medium_divider"></div>
                 </div>
             </div>
-            <div class="row" >
+            <div class="row" *ngIf="produitRelative.length">
                 <div class="col-12">
                     <div class="heading_s1">
                         <h3>Produits Simulaires</h3>
