--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,11 +11,11 @@
                                 <div class="banner_content overflow-hidden">
                                     <h5 class="mb-3 staggered-animation font-weight-light animated slideInLeft"
                                         style="animation-delay: 0.5s; opacity: 1;">
-                                        {{ banner.titre1 }}
+                                        {{ banner.sous_titre }}
                                     </h5>
                                     <h2 class="staggered-animation animated slideInLeft"
                                         style="animation-delay: 1s; opacity: 1;">
-                                        {{ banner.titre2 }}
+                                        {{ banner.titre }}
                                     </h2>
                                     <a [href]=" banner.btn_link "
                                         class="btn btn-fill-out rounded-0 staggered-animation text-uppercase animated slideInLeft"
