--- a/src/app/components/collection/collection.component.html
+++ b/src/app/components/collection/collection.component.html
@@ -5,8 +5,8 @@
                 <div class="single_banner">
                     <img [src]="collection.imageUrl" alt="shop_banner_img1" />
                     <div class="single_banner_info">
-                        <h5 class="single_bn_title1">{{ collection.titre1 }}</h5>
-                        <h3 class="single_bn_title">{{ collection.titre2 }}</h3>
+                        <h5 class="single_bn_title1">{{ collection.sous_titre }}</h5>
+                        <h3 class="single_bn_title">{{ collection.titre }}</h3>
                         <a class="single_bn_link" [href]="collection.btn_link">{{ collection.btn_text }}</a>
                     </div>
                 </div>
