--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -17,7 +17,7 @@
                                         style="animation-delay: 1s; opacity: 1;">
                                         {{ banner.titre }}
                                     </h2>
-                                    <a [href]="'/produitDAO/' + banner.btn_link"
+                                    <a [href]="'produit/' + banner.btn_link"
                                         class="btn btn-fill-out rounded-0 staggered-animation text-uppercase animated slideInLeft"
                                         style="animation-delay: 1.5s; opacity: 1;">
                                         {{ banner.btn_text }}
