--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="product_info">
-        <h6 class="product_title"><a ng-reflect-router-link="#" [routerLink]="['/produitDAO', produitDAO?.slug]">
+        <h6 class="product_title"><a ng-reflect-router-link="#" [routerLink]="['/produit', produitDAO?.slug]">
                 {{produitDAO?.designation}}
             </a></h6>
         <div class="product_price">
